2008-02-26  Atsushi Enomoto  <atsushi@ximian.com>

	* CSharpCodeCompiler.cs : build fix.
	  CompilerResults.Output is read only.

2008-02-25  Marek Habersack  <mhabersack@novell.com>

	* CSharpCodeCompiler.cs: ignore standard output and report only
	lines printed to stdandard error to the caller.

2008-01-27  Gert Driesen  <drieseng@users.sourceforge.net>

	* CSharpCodeGenerator.cs: Avoid ArgumentNullException when
	CodeDelegateInvokeExpression.TargetObject is null.

2008-01-16  Gert Driesen  <drieseng@users.sourceforge.net>

	* CSharpCodeGenerator.cs: Cosmetic changes to the code emitted for
	type constraints. Allows our unit tests to pass on both Mono and MS.

2008-01-16  Juraj Skripsky  <js@hotfeet.ch>

	* CSharpCodeGenerator.cs (GenerateGenericsConstraints): Take 
	solitary constructor constraints into account. Fixes bug #353921.

2008-01-16  Zoltan Varga  <vargaz@gmail.com>

	* CSharpCodeCompiler.cs: Avoid setting results.CompiledAssembly since it might
	be a netmodule. Fixes #353536.

2008-01-14  Marek Habersack  <mhabersack@novell.com>

	* CSharpCodeCompiler.cs: 3.0 is the default version now.

2008-01-10  Marek Habersack  <mhabersack@novell.com>

	* CSharpCodeCompiler.cs: check if running under the debugger and,
	if yes, make sure that gmcs runs correctly by removing the
	MONO_INSIDE_MDB environment variable before executing gmcs and
	restore it after the compiler process exits. Fixes bug #352377.

2007-12-15  Marek Habersack  <mhabersack@novell.com>

	* CSharpCodeProvider.cs: added support for the 2.0sp1 constructor
	which takes a Dictionary <string, string> parameter with compiler
	provider options. If any options are present, the
	generator/compiler are created using appropriate constructor
	overload.

	* CSharpCodeGenerator.cs: added support for the 2.0sp1 constructor
	which takes a Dictionary <string, string> parameter with compiler
	provider options.

	* CSharpCodeCompiler.cs: added support for the 2.0sp1 constructor